--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:name=".activities.MainApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -22,7 +23,7 @@
         android:theme="@style/Theme.Regist"
         tools:targetApi="31">
         <activity
-            android:name=".activities.ItemsTwoActivity"
+            android:name=".activities.NewAgvActivity"
             android:exported="false" />
         <activity
             android:name=".activities.UserActivity"
