--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.PPRAgvActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.AgvAllActivity"
             android:exported="false"
             android:theme="@style/Theme.Regist" />
