--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.ShowLogActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.ShowOneAgvToActivity"
             android:exported="false" />
         <activity
@@ -42,9 +45,6 @@
             android:name=".activities.ScannerActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.ItemsActivity"
-            android:exported="false" />
-        <activity
             android:name=".activities.SettingsActivity"
             android:exported="false" />
         <activity
@@ -58,7 +58,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
